--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,9 +2,9 @@ header {
   display: flex;
   align-items: baseline;
   justify-content: center;
-  gap: 2rem;
+  gap: 4rem;
   background-color: rgb(51, 51, 51);
-  height: 3rem;
+  height: 6rem;
   width: 100%;
   /* box-shadow: 0px 1px 1px rgb(41, 41, 41); */
   position: fixed;
@@ -13,16 +13,17 @@ header {
 
 li {
   list-style: none;
-  font-size: 1rem;
+  font-size: 2rem;
   /* font-weight: bold; */
 }
 
 .navItem {
   color: rgb(255, 255, 255);
   text-decoration: none;
-  /* font-weight: bold; */
-  font-size: 12px;
+  font-weight: bold;
+  font-size: 24px;
   display: inline-block;
+  font-family: "Poppins", sans-serif;
 }
 
 .navItem:hover {
@@ -38,7 +39,7 @@ ul {
   display: flex;
   justify-content: center;
   flex-direction: row;
-  gap: 1rem;
+  gap: 2rem;
   align-items: baseline;
 }
 
