--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,50 +1,50 @@
 header {
-	display: flex;
-	align-items: baseline;
-	justify-content: center;
-	gap: 4rem;
-	background-color: rgb(51, 51, 51);
-	height: 6rem;
-	width: 100%;
-	/* box-shadow: 0px 1px 1px rgb(41, 41, 41); */
-	position: fixed;
-	border-bottom: 1px solid rgb(143, 143, 143);
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  gap: 4rem;
+  background-color: rgb(51, 51, 51);
+  height: 96px;
+  width: 100%;
+  /* box-shadow: 0px 1px 1px rgb(41, 41, 41); */
+  position: fixed;
+  border-bottom: 1px solid rgb(143, 143, 143);
 }
 
 li {
-	list-style: none;
-	font-size: 2rem;
-	/* font-weight: bold; */
+  list-style: none;
+  font-size: 2rem;
+  /* font-weight: bold; */
 }
 
 .navItem {
-	color: rgb(255, 255, 255);
-	text-decoration: none;
-	font-weight: bold;
-	font-size: 24px;
-	display: inline-block;
-	font-family: "Poppins", sans-serif;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 24px;
+  display: inline-block;
+  font-family: "Poppins", sans-serif;
 }
 
 .navItem:hover {
-	color: rgb(58, 166, 255);
-	text-decoration: underline;
-	transform: scale(1.05);
-	text-shadow: 0px 0px 1px rgb(109, 125, 197);
+  color: rgb(58, 166, 255);
+  text-decoration: underline;
+  transform: scale(1.05);
+  text-shadow: 0px 0px 1px rgb(109, 125, 197);
 }
 ul {
-	padding: 0;
-	margin: 0;
-	align-self: center;
-	display: flex;
-	justify-content: center;
-	flex-direction: row;
-	gap: 2rem;
-	align-items: baseline;
+  padding: 0;
+  margin: 0;
+  align-self: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  gap: 2rem;
+  align-items: baseline;
 }
 
 .currentPage {
-	color: rgb(58, 166, 255);
+  color: rgb(58, 166, 255);
 }
 /* h1 {
   font-size: 1rem;
@@ -57,6 +57,6 @@ ul {
 } */
 
 .navigation {
-	justify-self: center;
-	align-self: center;
+  justify-self: center;
+  align-self: center;
 }
